--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </div>
                         <div class="nav-headings" title="Exercises and Quizzes">
                             <div class="nav-title">
-                                Exercises
+                                References
                             </div>
                             <div class="dropdown-container">
                                 <img class="dropdown-svg" src="images/arrow-drop-down.svg" alt="">
@@ -57,7 +57,7 @@
                         </div>
                         <div class="nav-headings" title="Certificates">
                             <div class="nav-title">
-                                Certificates
+                                Exercises
                             </div>
                             <div class="dropdown-container">
                                 <img class="dropdown-svg" src="images/arrow-drop-down.svg" alt="">
@@ -65,7 +65,7 @@
                         </div>
                         <div class="nav-headings" title="Our Services">
                             <div class="nav-title">
-                                Services
+                                Certificates
                             </div>
                             <div class="dropdown-container">
                                 <img class="dropdown-svg" src="images/arrow-drop-down.svg" alt="">
@@ -875,17 +875,54 @@ WHERE Country='Mexico';
                                     <div class="hts-dot hts-dot-3"></div>
                                 </div>
                                 <div class="hts-ide-input">
-                                    <input type="text" placeholder="www.w3schools.com/tryit/" readonly>
+                                    <input type="text" placeholder="www.w3schools.com/howto/" readonly>
                                 </div>
                             </div>
                         </div>
-                        <button class="how-to-section-btn">Learn How To</button>
+                        <!-- Slideshow container -->
+                        <div class="hts-slideshow-container-box">
+                        <div class="slideshow-container hts-slideshow-container">
+
+                            <!-- Full-width images with number and caption text -->
+                            <div class="mySlides fade">
+                                <div class="numbertext">1 / 3</div>
+                                <img src="images/img1.jpg" style="width:100%">
+                                <div class="text">Caption Text</div>
+                            </div>
+
+                            <div class="mySlides fade">
+                                <div class="numbertext">2 / 3</div>
+                                <img src="images/img2.jpg" style="width:100%">
+                                <div class="text">Caption Two</div>
+                            </div>
+
+                            <div class="mySlides fade">
+                                <div class="numbertext">3 / 3</div>
+                                <img src="images/img3.jpg" style="width:100%">
+                                <div class="text">Caption Three</div>
+                            </div>
+
+                            <!-- Next and previous buttons -->
+                            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                        </div>
+                        <!-- The dots/circles -->
+                        <div style="text-align:center;margin-top:10px;">
+                            <span class="dot" onclick="currentSlide(1)"></span>
+                            <span class="dot" onclick="currentSlide(2)"></span>
+                            <span class="dot" onclick="currentSlide(3)"></span>
+                        </div>
+                        <br>
                     </div>
+                    <div class="how-to-section-pillar"></div>
+                    <button class="how-to-section-btn">Learn How To</button>
+                    </div>
+                </div>
             </div>
         </main>
         <script>
             function Add_And_Remove_Class(Active_Cls, Normal_Cls, Btn_Type) {
-                const Frontend_Element = document.getElementById('end-btn-front')
+                const Frontend_Element = document.getElementById('end-btn-front');
                 const Backend_Element = document.getElementById('end-btn-back');
                 const Front_end_Img = document.getElementById("ide-img-front");
                 const Back_end_Img = document.getElementById("ide-img-back");
@@ -909,6 +946,40 @@ WHERE Country='Mexico';
                     Front_end_Img.style.display = "none";
                 }
             }
+
+
+            /* Here Starts JAVASCRIPT Directly From W3School How to Section of Building Carousel*/
+
+            let slideIndex = 1;
+            showSlides(slideIndex);
+
+            // Next/previous controls
+            function plusSlides(n) {
+                showSlides(slideIndex += n);
+            }
+
+            // Thumbnail image controls
+            function currentSlide(n) {
+                showSlides(slideIndex = n);
+            }
+
+            function showSlides(n) {
+                let i;
+                let slides = document.getElementsByClassName("mySlides");
+                let dots = document.getElementsByClassName("dot");
+                if (n > slides.length) {slideIndex = 1}
+                if (n < 1) {slideIndex = slides.length}
+                for (i = 0; i < slides.length; i++) {
+                    slides[i].style.display = "none";
+                }
+                for (i = 0; i < dots.length; i++) {
+                    dots[i].className = dots[i].className.replace(" active", "");
+                }
+                slides[slideIndex-1].style.display = "block";
+                dots[slideIndex-1].className += "active";
+            }
+
+            /* W3School How to Section JAVASCRIPT Ends Here */
         </script>
     </body>
 
